[gd_scene load_steps=18 format=3 uid="uid://dc1nwx0hltori"]

[ext_resource type="Script" path="res://釣魚/fishing_game.gd" id="1_826u1"]
[ext_resource type="Script" path="res://釣魚/fishspawner.gd" id="2_1qyyv"]
[ext_resource type="PackedScene" uid="uid://kqhtmvtcq7ce" path="res://釣魚/coral_whit.tscn" id="2_urpjt"]
[ext_resource type="PackedScene" uid="uid://bv57vijwhmaw8" path="res://釣魚/coral_pink.tscn" id="3_aq5wr"]
[ext_resource type="PackedScene" uid="uid://cix2w2eosokn8" path="res://釣魚/target.tscn" id="3_n43jp"]
[ext_resource type="PackedScene" uid="uid://dy7rgeakwpjsu" path="res://釣魚/fish_green.tscn" id="3_xpwqf"]
[ext_resource type="PackedScene" uid="uid://dnwxdiq8evel3" path="res://釣魚/fish-orange.tscn" id="4_5qmu8"]
[ext_resource type="PackedScene" uid="uid://blqjr0j0xydkh" path="res://釣魚/coral_purple.tscn" id="4_qxjpa"]
[ext_resource type="PackedScene" uid="uid://cqmfb8uuf8fc1" path="res://釣魚/coral_red.tscn" id="5_fkx0w"]
[ext_resource type="PackedScene" uid="uid://cvktquitsx5sw" path="res://釣魚/fish_grey.tscn" id="5_ihcg2"]
[ext_resource type="PackedScene" uid="uid://bxqgbhlfoqemv" path="res://釣魚/sea_weed_blue.tscn" id="6_e7ddi"]
[ext_resource type="PackedScene" uid="uid://dcwd22bfyv45a" path="res://釣魚/jellyfish.tscn" id="6_mhalm"]
[ext_resource type="PackedScene" uid="uid://csqrvlrx7w8fu" path="res://釣魚/sea_weed_dark.tscn" id="7_xk3rj"]
[ext_resource type="PackedScene" uid="uid://qj0qubqowpt1" path="res://釣魚/sawshark.tscn" id="7_yqwm8"]
[ext_resource type="PackedScene" uid="uid://dywgp2me5oayf" path="res://釣魚/swordfish.tscn" id="8_2dm3c"]
[ext_resource type="PackedScene" uid="uid://b2sfp4h8phuo7" path="res://釣魚/sea_weed_light.tscn" id="8_sp0kb"]
[ext_resource type="PackedScene" uid="uid://d2e7q1lcwfnqm" path="res://釣魚/sea_weed_pink.tscn" id="9_kupm3"]

[node name="fishing_game" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 288.0
offset_bottom = 162.0
script = ExtResource("1_826u1")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 288.0
offset_bottom = 162.0
color = Color(0.156863, 0.411765, 1, 1)

[node name="coral" type="Label" parent="ColorRect"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="coral-whit" parent="ColorRect/coral" instance=ExtResource("2_urpjt")]
position = Vector2(240, 145)
scale = Vector2(3.12, 2.32)

[node name="coral-pink" parent="ColorRect/coral" instance=ExtResource("3_aq5wr")]
position = Vector2(13, 147)
scale = Vector2(1.8, 1.8)

[node name="coral-purple" parent="ColorRect/coral" instance=ExtResource("4_qxjpa")]
position = Vector2(39, 142)
scale = Vector2(2.91346, 2.7443)

[node name="coral-red" parent="ColorRect/coral" instance=ExtResource("5_fkx0w")]
position = Vector2(272, 135)
rotation = 3.14159
scale = Vector2(4.23718, -3.74723)

[node name="coral-whit2" parent="ColorRect/coral" instance=ExtResource("2_urpjt")]
position = Vector2(66, 141)
scale = Vector2(2.52, 2.56)

[node name="coral-red2" parent="ColorRect/coral" instance=ExtResource("5_fkx0w")]
position = Vector2(15, 118)
rotation = 0.353201
scale = Vector2(3.12, 2.96)

[node name="coral-purple2" parent="ColorRect/coral" instance=ExtResource("4_qxjpa")]
position = Vector2(210, 149)
scale = Vector2(2.72, 1.96)

[node name="coral-pink2" parent="ColorRect/coral" instance=ExtResource("3_aq5wr")]
position = Vector2(272, 106)
rotation = -0.541988
scale = Vector2(-3.25738, 2.716)

[node name="seaweed" type="Label" parent="ColorRect"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="sea weed-blue" parent="ColorRect/seaweed" instance=ExtResource("6_e7ddi")]
position = Vector2(56, 111)
scale = Vector2(2.24, 3.16)
autoplay = "new_animation_1"

[node name="sea weed-dark" parent="ColorRect/seaweed" instance=ExtResource("7_xk3rj")]
position = Vector2(229, 125)
scale = Vector2(2.07938, 2.30497)
autoplay = "new_animation_1"

[node name="sea weed-light" parent="ColorRect/seaweed" instance=ExtResource("8_sp0kb")]
position = Vector2(82, 147)
autoplay = "default"

[node name="sea weed-light2" parent="ColorRect/seaweed" instance=ExtResource("8_sp0kb")]
position = Vector2(189, 138)
scale = Vector2(1.94623, 1.54303)
autoplay = "default"

[node name="sea weed-pink" parent="ColorRect/seaweed" instance=ExtResource("9_kupm3")]
position = Vector2(180, 146)
autoplay = "default"

[node name="sea weed-dark2" parent="ColorRect/seaweed" instance=ExtResource("7_xk3rj")]
position = Vector2(23, 111)
scale = Vector2(2.04, 3.28)
autoplay = "new_animation_1"

[node name="sea weed-blue2" parent="ColorRect/seaweed" instance=ExtResource("6_e7ddi")]
position = Vector2(254, 145)
scale = Vector2(1.71743, 1.244)
autoplay = "new_animation_1"

[node name="AquaContainer" type="Control" parent="."]
anchors_preset = 0
offset_right = 288.0
offset_bottom = 162.0

[node name="fishspawner" type="Node" parent="AquaContainer" node_paths=PackedStringArray("aquaContainer")]
script = ExtResource("2_1qyyv")
aquaContainer = NodePath("..")
fish_scenes = Array[PackedScene]([ExtResource("3_xpwqf"), ExtResource("4_5qmu8"), ExtResource("5_ihcg2"), ExtResource("6_mhalm"), ExtResource("7_yqwm8"), ExtResource("8_2dm3c")])

[node name="target" parent="." instance=ExtResource("3_n43jp")]
position = Vector2(142, 84)
scale = Vector2(0.5, 0.5)

[node name="UI" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="Score" type="Label" parent="UI"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="TimerLabel" type="Label" parent="UI"]
layout_mode = 0
offset_left = 222.0
offset_top = 1.0
offset_right = 262.0
offset_bottom = 24.0

[node name="GameOverOverlay" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 288.0
offset_bottom = 162.0
color = Color(0.113725, 0.113725, 0.113725, 0.780392)

[node name="VBoxContainer" type="VBoxContainer" parent="GameOverOverlay"]
layout_mode = 0
offset_right = 288.0
offset_bottom = 162.0

[node name="GameOverLabel" type="Label" parent="GameOverOverlay/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="FinalScoreLabel" type="Label" parent="GameOverOverlay/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1
vertical_alignment = 1
